traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:18: error: not found: value x
  if ( (x -1 == getX()) && (y -1 == getY())) {return true}
        ^TraversalByColumn:18: error: not found: value y
  if ( (x -1 == getX()) && (y -1 == getY())) {return true}
                            ^